# SDL2-Pong-CPP

./: .gitignore  CMakeLists.txt  README.md
include/: Entity.hpp  Game.hpp  Math.hpp  RenderWindow.hpp  Utils.hpp
src/: Entity.cpp  Game.cpp  RenderWindow.cpp  Utils.cpp  main.cpp  renderwindow.cpp
